fixed filter button on iphone done

--- a/public/_new-layout-eventweekly/css/style.css
+++ b/public/_new-layout-eventweekly/css/style.css
@@ -3994,7 +3994,7 @@ table.default thead {
 
 .ew-filter-link {
   position: fixed;
-  top: 216px;
+  top: 221px;
   left: 0;
   z-index: 100;
 }
